# M4

./: .gitignore  README.md  README_EN.md  SFT_script.py  engine_finetune.py  experiments.csv  experiments2.csv  experiments3.csv  experiments4.csv  experiments5.csv  get_imagenet_model.py  main_finetune.py  models_vit.py  pyproject.toml  requirements.txt  script.py  test.csv  train.sh  train_new.sh
analysis/: gastroscopy_MIL.py  gastroscopy_MIL_additional_columns_3.py  gastroscopy_statistic.py  k_fold_analysis.py
data/: data_statistic.py  new_fold.py
util/: datasets.py  misc.py
