[project]
name = "m4"
version = "0.1.0"
description = "M4"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub~=0.23.4",
    "ipykernel==7.2.0",
    "matplotlib~=3.8.4",
    "numpy~=1.26.4",
    "opencv-python~=4.9.0.80",
    "pandas>=2.3.3",
    "pillow~=10.2.0",
    "pycm~=4.6",
    "scikit-learn~=1.4.2",
    "scikit-multilearn~=0.2.0",
    "tensorboard~=2.17.0",
    "timm~=0.9.2",
    "torch==2.5.1",
    "torchmetrics==1.8.2",
    "torchvision==0.20.1",
]


[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
